# daily-dish

./: .commitlintrc.cjs  .gitignore  .lintstagedrc.mjs  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.claude/: settings.json
.claude/commands/: commit.md
.claude/hooks/: post_edit.sh
.github/workflows/: ci.yml
.husky/: pre-push
apps/api/: .env.example  Makefile  Procfile  README.md  alembic.ini  pyproject.toml  railway.toml  test.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_categories_and_tags.py  0003_user_favorites.py
apps/api/app/: config.py  database.py  deps.py  main.py  middleware.py
apps/api/app/models/: __init__.py  category.py  favorite.py  ingredient.py  recipe.py  user.py
apps/api/app/routers/: auth.py  categories.py  favorites.py  recipes.py  tags.py  uploads.py
apps/api/app/utils/: slug.py  uuid7.py
apps/api/tests/: conftest.py  test_auth.py  test_categories.py  test_favorites.py  test_recipe_categories_tags.py  test_recipes.py  test_slug.py  test_tags.py  test_trash.py  test_uploads.py
apps/web/: .env.example  .gitignore  README.md  UI_GUIDELINES.md  biome.json  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/app/: app.vue  error.vue
apps/web/app/assets/css/: main.css
apps/web/app/components/: CategorySidebar.vue  FavoriteButton.vue  HeroBanner.vue  RecipeCard.vue  RecipeForm.vue  RecipeListItem.vue  SidebarContent.vue
apps/web/app/composables/: useCategories.ts  useRecipeFilters.ts  useTags.ts
apps/web/app/layouts/: default.vue
apps/web/app/middleware/: auth.ts
apps/web/app/pages/: favorites.vue  index.vue  login.vue  me.vue
apps/web/app/pages/me/: index.vue  trash.vue
apps/web/app/pages/r/: new.vue
apps/web/app/pages/r/[slug]/: edit.vue  (+1 more)
apps/web/app/stores/: auth.ts  favorites.ts
apps/web/app/utils/: api.ts  categoryConfig.ts
apps/web/e2e/: smoke.spec.ts
apps/web/public/: site.webmanifest
apps/web/server/routes/api/: [...path].ts
apps/web/tests/: useRecipeFilters.test.ts
apps/web/types/: api.d.ts  forms.ts
openspec/: config.yaml
openspec/changes/add-agent-backpressure/: design.md  proposal.md  tasks.md
openspec/changes/add-agent-backpressure/specs/agent-backpressure/: spec.md
openspec/changes/archive/2026-04-24-add-v1-mvp/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-25-add-recipe-categories-and-tags/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-25-add-recipe-favorites/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-image-lifecycle-and-trash/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-prepare-deployment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-add-site-metadata/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-proxy-api-via-vercel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-add-agent-backpressure/: design.md  proposal.md  tasks.md
openspec/changes/proxy-api-via-vercel/: design.md  proposal.md  tasks.md
openspec/changes/proxy-api-via-vercel/specs/auth/: spec.md
openspec/changes/proxy-api-via-vercel/specs/deployment-config/: spec.md
openspec/specs/agent-backpressure/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/categories-and-tags/: spec.md
openspec/specs/deployment-config/: spec.md
openspec/specs/recipe-favorites/: spec.md
openspec/specs/recipe-trash/: spec.md
openspec/specs/recipes/: spec.md
scripts/: verify.sh
(+11 files in other folders)
