[project]
name = "api"
version = "0.1.0"
description = "Daily Dish FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.7.0",
    "cloudinary>=1.44.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlmodel>=0.0.38",
    "uuid6>=2025.0.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "basedpyright>=1.28.0",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"alembic/versions/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["app", "tests", "alembic"]
exclude = ["**/__pycache__", "test.db", ".venv"]
strict = ["app"]

# Rule overrides at this level apply outside `strict` scope (tests, alembic).
# Note: `strict = ["app"]` forces every strict rule to "error" inside `app/` and
# IGNORES the overrides below — for `app/`-specific relaxations we use file-level
# `# pyright: <rule>=none` comments instead.
reportMissingTypeStubs = "none"

# `app/models/`: SQLModel quirks (`__tablename__ = "..."` clashes with the
# `declared_attr` declared on the SQLModel base; `Field(default_factory=…)`
# returns a FieldInfo that pyright sees as the field's declared type).
# Listed here for non-strict callers (e.g. `tests/` importing models); inside
# `strict` scope each model file pins `reportAssignmentType=none` at the top.
[[tool.basedpyright.executionEnvironments]]
root = "app/models"
reportAssignmentType = "none"

# `alembic.op` augments its module at runtime via op.f / op.create_table etc.;
# pyright cannot see those attributes. Migration files are auto-generated.
[[tool.basedpyright.executionEnvironments]]
root = "alembic/versions"
reportAttributeAccessIssue = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
